# midnight-bls12-381-cuda

./: Cargo.toml  README.md
benches/: gpu_msm.rs
bls12-381/: CMakeLists.txt  LICENSE  README.md
bls12-381/include/: bls12_381_constants.h  bls12_381_params.cuh  field.cuh  icicle_backend_api.cuh  icicle_types.cuh  msm.cuh  ntt.cuh  point.cuh
bls12-381/include/icicle/: device.h  device_api.h  errors.h  memory_tracker.h  runtime.h
bls12-381/include/icicle/utils/: log.h  utils.h
bls12-381/src/backend/: g2_registry.cu  icicle_curve_api.cu  icicle_field_api.cu
bls12-381/src/curve/: msm_kernels.cu  point_ops.cu
bls12-381/src/device/: cuda_device_api.cu
bls12-381/src/field/: ntt_kernels.cu  vec_ops.cu
bls12-381/tests/: security_audit_tests.cuh  test_curve_operations.cu  test_field_properties.cu  test_known_answer_vectors.cu  test_msm_security.cu  test_ntt_security.cu  test_point_ops.cu  test_security_edge_cases.cu  test_vec_ops.cu
core/: backend.rs  config.rs  mod.rs  msm.rs  ntt.rs  stream.rs  types.rs  vecops.rs
docs/gpu-integration/: FILE_CHANGES_DETAILED.md  GPU_INTEGRATION_ARCHITECTURE.md  README.md
docs/gpu-integration/diffs-2df59557/: README.md  batch_commit.rs.diff  gitignore.diff  gpu_accel.rs.diff  kzg_mod.rs.diff  kzg_msm.rs.diff  kzg_params.rs.diff  lib.rs.diff  lookup_prover.rs.diff  permutation_prover.rs.diff  plonk_prover.rs.diff  poly_domain.rs.diff  poly_mod.rs.diff  proofs_Cargo.toml.diff  test_e2e_proof_benchmark.rs.diff  test_gpu_integration.rs.diff  test_gpu_msm_benchmark.rs.diff  test_msm_blst_detection.rs.diff  trash_prover.rs.diff  utils_fft.rs.diff  utils_mod.rs.diff  workspace_Cargo.toml.diff
include/: field.cuh  gpu_config.cuh  msm.cuh
src/curve/: msm_kernels.cu  point_ops.cu
src/field/: ntt_kernels.cu
tests/: ntt_fft_comparison.rs
