[package]
name = "midnight-bls12-381-cuda"
version = "0.1.0"
edition = "2021"
rust-version = "1.76.0"
description = "CUDA-accelerated BLS12-381 operations for midnight-zk using ICICLE"
license = "MIT OR Apache-2.0"
repository = "https://github.com/yourusername/bls12-381-cuda-backend"
keywords = ["cryptography", "gpu", "cuda", "bls12-381", "icicle"]
categories = ["cryptography", "mathematics"]

[dependencies]
# Core dependencies
ff = "0.13"
group = "0.13"
# Note: halo2curves provides the CurveAffine trait needed for from_xy method
halo2curves = { version = "0.7.0", default-features = false }
midnight-curves = { path = "../curves", version = "0.2.0" }
rayon = "1.10"
tracing = "0.1"

# GPU acceleration dependencies (optional)
icicle-runtime = { git = "https://github.com/ingonyama-zk/icicle.git", tag = "v4.0.0", optional = true }
icicle-core = { git = "https://github.com/ingonyama-zk/icicle.git", tag = "v4.0.0", optional = true }
icicle-bls12-381 = { git = "https://github.com/ingonyama-zk/icicle.git", tag = "v4.0.0", features = ["msm", "g2"], optional = true }
once_cell = { version = "1.20", optional = true }

# Compile-time assertions for memory layout verification
static_assertions = "1.1"

[dev-dependencies]
rand = "0.8"
rand_core = "0.6"
criterion = "0.7"

[features]
default = []
# GPU acceleration via ICICLE CUDA backend
gpu = ["icicle-runtime", "icicle-core", "icicle-bls12-381", "once_cell"]

# Instrumentation features for performance analysis
# These add detailed tracing to measure operation timing and throughput
# Note: These should NOT be enabled in production builds due to performance overhead
trace-msm = []        # Trace multi-scalar multiplication operations
trace-fft = []        # Trace FFT/IFFT operations
trace-all = ["trace-msm", "trace-fft"]

[lib]
name = "midnight_bls12_381_cuda"
path = "core/mod.rs"

[[bench]]
name = "gpu_msm"
harness = false
required-features = ["gpu"]

[package.metadata.docs.rs]
all-features = true
